# python-lint-code-scanning-action

./: .flake8  .gitignore  README.md  action.yml  pyproject.toml  python_lint.py
.github/workflows/: codeql.yml  lint.yml  starter-workflow.yml
flake8_sarif_formatter/: README.md  flake8_sarif_formatter.py  pyproject.toml
test_python_project/: test_python_project.py
